--- a/addons/asai_test_task/views/packaging_order_form_views.xml
+++ b/addons/asai_test_task/views/packaging_order_form_views.xml
@@ -44,22 +44,6 @@
                     </group>
 
 
-                    <group>
-
-                    
-                    <group>
-                        <field name="name" readonly="1"/>
-                        <field name="responsible_id" readonly="1"/>
-                        <field name="state"/>
-                    </group>
-                    <group>
-                        <field name="total_items" readonly="1"/>
-                        <field name="packed_items" readonly="1"/>
-                        <field name="defective_items" readonly="1"/>  <!-- Добавляем поле -->
-                        <field name="progress" widget="progressbar" readonly="1"/>
-                    </group>
-                </group>
-
                     <field name="item_ids">
                         <list>
                             <field name="item_code"/>
@@ -80,10 +64,11 @@
                     </field>
 
                     <footer>
-                        <button name="action_mark_completed" string="Mark as Completed" type="object" class="btn-primary" invisible="not show_mark_completed"/>
-                        <button name="action_mark_defective" string="Mark as Defective" type="object" class="btn-danger" invisible="not show_mark_defective"/>
-                        <button name="action_reset_to_draft" string="Reset to Draft" type="object" class="btn-secondary" invisible="not show_reset_draft"/>
-                        <button name="action_cancel_order" string="Cancel Order" type="object" class="btn-warning" invisible="not show_cancel_order"/>
+                        <button name="action_mark_completed" string="Mark as Completed" type="object" class="btn-primary" invisible="state not in ['draft', 'in_progress']"/>
+                        <button name="action_mark_defective" string="Mark as Defective" type="object" class="btn-danger" invisible="state not in ['draft', 'in_progress']"/>
+                        <button name="action_reset_packing" string="Reset Packing" type="object" class="btn-warning" invisible="state not in ['in_progress', 'defective']"/>
+                        <button name="action_reset_to_draft" string="Reset to Draft" type="object" class="btn-secondary" invisible="state not in ['completed', 'canceled']"/>
+                        <button name="action_cancel_order" string="Cancel Order" type="object" class="btn-warning" invisible="state not in ['draft', 'in_progress']"/>
                     </footer>
                 </sheet>
             </form>
